--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Doce Maison</title>
+  <title>ALSpastery</title>
   <link rel="icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
