--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <p>Desde 2011, adoçando os momentos mais especiais da vida.</p>
+  <p class="footer">Desde 2011, adoçando os momentos mais especiais da vida.</p>
 </footer>
 
 </body>
